2004-09-28  Petr Ovtchenkov  <ptr@island...>

	* Repository: iostreams and string wrapper mode removed, due to ones has
	a lot of restrictions in usage and frequently lead to hard recognized problems.
	Tonns of *_STREAMS macro replaced by _STLP_USE_NO_IOSTREAMS or _STLP_NO_IOSTREAMS
	as configuration macro; *NATIVE_STRING macro removed by the same reasons.

2004-09-27  Petr Ovtchenkov  <ptr@island...>

	* test/unit/gcc.mak: fix stlport library name for STLP_DEBUG mode for Solaris,
	thanks for separate namespaces in normal and STLP_DEBUG mode, see record
	2004-09-10 below.

2004-09-24  Francois Dumont  <dums@...>

	* stlport/config/stl_gcc.h: Fix of the relative include path used to access the
	native gcc headers. Before version 3.4.0 the 0 patch level was not part of the 
	include	path.
	
	* stlport/stl/type_traits.h, _vector.h, _algobase.h, _construct.h: Removal
	of the __action_on_move type traits replaced by a generalization of the 
	already existing __move_traits.
	
	* test/unit/mvctor_test.cpp: New test case for the __move_traits feature.
	
2004-09-24  Petr Ovtchenkov  <ptr@island...>

	* src/explore/Makefiles/gmake/sunos: 'explore' makesystem adopted to work
	under Solaris with GNU make.

	* test/unit/gcc.mak: ditto.

	* src/explore/Makefiles/gmake/app/gcc.mak: ditto.

	* src/explore/Makefiles/gmake/lib/gcc.mak: ditto.

	* stlport/cmath: fix some math calls for Solaris.

	* test/unit/list_test.cpp: add illustration for list iterator/reverse_iterator questions.

	* src/explore/Makefiles/gmake/unix/lib.mak: moved from linux/lib.mak, as
	common rules for all *nixes.

	* src/explore/Makefiles/gmake/linux/lib.mak: use common for all *nixes rules
	in unix/lib.mak.

	* src/explore/Makefiles/gmake/freebsd/lib.mak: ditto.

	* src/explore/Makefiles/gmake/openbsd/lib.mak: ditto.

	* src/explore/Makefiles/gmake/sunos/lib.mak: ditto.

	* src/explore/Makefiles/gmake/unix/lib.mak, test/unit/gcc.mak: changed library name;