@@ -1,3 +1,7 @@
+004-09-29  Petr Ovtchenkov  <ptr@island...>
+
+	* stlport/stl/char_traits.h: WinCE seems don't declare off_t; thanks Michael Fink.
+
 2004-09-28  Petr Ovtchenkov  <ptr@island...>
 
 	* Repository: iostreams and string wrapper mode removed, due to ones has
